[metadata]
name = PNU
description = The PNU Project / PyNIX
long_description = file: README.md
long_description_content_type = text/markdown
version = 2021.6.8
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/PNU/
project_urls =
    Bug Tracker = https://github.com/HubTou/PNU/issues
keywords = pnu-project
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Environment :: Console
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Topic :: System
    Topic :: Utilities

[options]
package_dir =
packages = find:
python_requires = >=3.8
install_requires =
    pnu-about
    pnu-b2bt
    pnu-basename
    pnu-echobox

[options.data_files]
share/PNU = 
    tests/basename.xml
    tests/dirname.xml
    tests/echo.xml
    tests/yes.xml

