[metadata]
name = PNU
description = The PNU Project
long_description = file: README.md
long_description_content_type = text/markdown
version = 2021.6.24
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/PNU/
project_urls =
    Bug Tracker = https://github.com/HubTou/PNU/issues
keywords = pnu-project
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Education
    Topic :: Education :: Testing
    Topic :: Software Development :: Testing
    Topic :: System
    Topic :: System :: Software Distribution
    Topic :: Text Processing :: Filters
    Topic :: Utilities

[options]
package_dir =
packages = find:
python_requires = >=3.8
install_requires =
    pnu-about
    pnu-b2bt
    pnu-basename
    pnu-echobox
    pnu-ngc
    pnu-prep
    pnu-unicode2ascii

[options.data_files]
share/PNU = 
    tests/basename.xml
    tests/dirname.xml
    tests/echo.xml
    tests/factor.xml
    tests/false.xml
    tests/prep.xml
    tests/primes.xml
    tests/true.xml
    tests/yes.xml

