[metadata]
name = PNU
description = The PNU Project
long_description = file: README.md
long_description_content_type = text/markdown
version = 2023.3.25
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = hubert.tournier@gmail.com
url = https://github.com/HubTou/PNU/
project_urls =
    Bug Tracker = https://github.com/HubTou/PNU/issues
keywords = pnu-project
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Education
    Topic :: Education :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Topic :: System
    Topic :: System :: Software Distribution
    Topic :: Text Processing :: Filters
    Topic :: Utilities

[options]
package_dir =
packages = find:
python_requires = >=3.8
install_requires =
    pnu-about
    pnu-adsv
    pnu-anagram
    pnu-b2bt
    pnu-basename
    pnu-conjuguer
    pnu-dcmp
    pnu-echobox
    pnu-fortune
    pnu-ident
    pnu-manpath
    pnu-mtoc
    pnu-ngc
    pnu-pipinfo
    pnu-prep
    pnu-rot13
    pnu-strfile
    pnu-strings
    pnu-true
    pnu-unicode2ascii
    pnu-vuxml; platform_system=="FreeBSD"
    pnu-what
    pnu-wis

[options.extras_require]
freebsd = pnu-vuxml

[options.data_files]
share/PNU = 
    tests/basename.xml
    tests/dirname.xml
    tests/echo.xml
    tests/factor.xml
    tests/false.xml
    tests/ident.xml
    tests/manpath.xml
    tests/prep.xml
    tests/primes.xml
    tests/rot13.xml
    tests/true.xml
    tests/what.xml
    tests/yes.xml

