[metadata]
name = pnu_COMMAND
description = ONE LINE DESCRIPTION
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.0
license = BSD 3-Clause License
license_files = License
author = YOU
author_email = nobody@nowhere.invalid
url = https://github.com/YOU/COMMAND/
project_urls =
    Bug Tracker = https://github.com/YOU/COMMAND/issues
keywords = pnu-project
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.x
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Environment :: Console
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Topic :: System
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.x
install_requires =
    OTHER_PACKAGE

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    COMMAND = COMMAND:main

[options.data_files]
man/man1 = 
    man/COMMAND.1.gz

