[metadata]
name = pnu_COMMAND
description = ONE_LINE_DESCRIPTION
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.0
license = BSD 3-Clause License
license_files = License
author = YOU
author_email = nobody@nowhere.invalid
url = https://github.com/YOU/COMMAND/
project_urls =
    Bug Tracker = https://github.com/YOU/COMMAND/issues
keywords = pnu-project
classifiers =
    Development Status :: 5 - Production/Stable                     <= if you are sufficiently confident...
    Environment :: Console
    Intended Audience :: Developers                                 <= if you offer libraries functions
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.x                           <= Get this from make check-version
    Topic :: Software Development :: Libraries :: Python Modules    <= if you offer libraries functions
    Topic :: System                                                 <= for standard Unix utilities or system tools
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.x      <= Get this from make check-version
install_requires =           <= only if there are packages needed as dependencies
    OTHER_PACKAGE            <= only if there are packages needed as dependencies

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    COMMAND = COMMAND:main       <= the main name by which your utility will be called
    OTHER_NAME = COMMAND:main    <= another name by which your utility can be called if needed

[options.data_files]
man/man1 =                 <= beware the section number
    man/COMMAND.1.gz       <= beware the section number
    man/OTHER_NAME.1.gz    <= if needed...

