[metadata]
name = COMMAND
description = ONE_LINE_DESCRIPTION
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.0
license = BSD 3-Clause License
license_files = License
author = YOU
author_email = YOUR_EMAIL
url = https://github.com/YOU/COMMAND/
project_urls =
    Bug Tracker = https://github.com/YOU/COMMAND/issues
keywords = pnu-project
classifiers =
    Development Status :: 5 - Production/Stable                     <= If you are sufficiently confident...
    Environment :: Console
    Intended Audience :: Developers                                 <= If you offer libraries functions
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Natural Language :: French                                      <= If you have an internationalized command
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD                     <= If you implement the FreeBSD version of a command
    Operating System :: Microsoft :: Windows                        <= If your command also work under Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.x                           <= Get this from make check-version
    Programming Language :: Python :: 3.0                           <= then remove those that are not compatible
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules    <= If you offer libraries functions
    Topic :: System                                                 <= For standard Unix utilities or system tools
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.x                 <= Get this from make check-version
install_requires =
    pnu-libpnu
    OTHER_PACKAGE                       <= Only if there are other packages needed as dependencies

[options.extras_require]                <= Only if you want to offer an install option
PACKAGE_OPTION = OTHER_PACKAGE          <= Only if you want to offer an install option

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    COMMAND = COMMAND:main              <= The main name by which your utility will be called
    OTHER_NAME = COMMAND:main           <= Another name by which your utility can be called if needed

[options.data_files]
man/man1 =                              <= Beware the section number
    man/COMMAND.1.gz                    <= same
    man/OTHER_NAME.1.gz                 <= If needed...
man/man3 =                              <= If you offer a library functions
    man/COMMAND.3.gz                    <= same
share/locale/en/LC_MESSAGES =           <= If you have an internationalized command
    src/conjuguer/po/en/conjuguer.mo    <= same
share/locale/fr/LC_MESSAGES =           <= same
    src/conjuguer/po/fr/conjuguer.mo    <= same

